template 개발 - 해더 사이드바 푸터 개발중

--- a/cinnamon-web-template-basic/src/main/resources/static/js/directives/layout/layout.tpl.html
+++ b/cinnamon-web-template-basic/src/main/resources/static/js/directives/layout/layout.tpl.html
@@ -1,13 +1,13 @@
 <!-- <div class="wrapper"> -->
 	
-	<!-- Main Header -->
-	<!-- <header class="main-header" ui-view="header"></header> -->
 	<header></header>
 	<sidebar></sidebar>
 
-	<div class="content-wrapper">
+	<content></content>
+
+	<!-- <div class="content-wrapper" ng-transclude style="min-height: {{contentHeight}}px"> -->
 		<!-- Content Header (Page header) -->
-		<section class="content-header">
+		<!-- <section class="content-header">
 			<h1>
 				Page Header <small>Optional description</small>
 			</h1>
@@ -15,21 +15,17 @@
 				<li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
 				<li class="active">Here</li>
 			</ol>
-		</section>
+		</section> -->
 
 		<!-- Main content -->
-		<section class="content">
-
+		<!-- <section class="content"> -->
 			<!-- Your Page Content Here -->
-
-		</section>
-		<!-- /.content -->
-	</div>
-	<!-- /.content-wrapper -->
+		<!-- </section> -->
+	<!-- </div> -->
+	
 	<footer></footer>
 	
 	<control-sidebar></control-sidebar>
 	<div class="control-sidebar-bg"></div>
 	
 <!-- </div> -->
-<!-- ./wrapper -->
