--- a/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
+++ b/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
@@ -28,8 +28,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 
 
-
-
 <script type="text/javascript" src="/webjars/angularjs/1.4.3/angular.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
@@ -65,12 +63,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
   |               | sidebar-mini                            |
   |=========================================================|
   -->
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="skin-blue sidebar-mini">
 	
-	<layout>
-		<layout:fragment="content" />
+	<layout ng-cloak="">
+		<div layout:fragment="content"></div>
 	</layout>
-
 	
 	<!-- <script type="text/javascript" src="all.js"></script> -->
 </body>
