템플릿 해더 구현중

--- a/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
+++ b/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
@@ -13,7 +13,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- Tell the browser to be responsive to screen width -->
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
 <!-- Bootstrap 3.3.4 -->
-<link href="/webjars/adminlte/2.3.0/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/bootstrap/3.3.5/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <!-- Font Awesome Icons -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 <!-- Ionicons -->
@@ -30,6 +30,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 <script type="text/javascript" src="/webjars/angularjs/1.4.3/angular.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js"></script>
+<script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.13.3/ui-bootstrap.min.js"></script>
+<!-- <script type="text/javascript" src="/webjars/jquery/2.1.4/dist/jquery.min.js"></script>
+<script type="text/javascript" src="/webjars/bootstrap/3.3.5/dist/js/bootstrap.min.js"></script> -->
+
 <script type="text/javascript" src="/js/main.js"></script>
 <script type="text/javascript" src="/js/directives/header/header.js"></script>
 <script type="text/javascript" src="/js/directives/sidebar/sidebar.js"></script>
