--- a/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
+++ b/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
@@ -15,7 +15,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- Bootstrap 3.3.4 -->
 <link href="/webjars/bootstrap/3.3.5/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <!-- Font Awesome Icons -->
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 <!-- Ionicons -->
 <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
 <!-- Theme style -->
