siteBuilder -> projectBuilder 로 변경하고 새로 개발중..

--- a/cinnamon-web-template-basic/src/main/resources/static/js/directives/layout/layout.tpl.html
+++ b/cinnamon-web-template-basic/src/main/resources/static/js/directives/layout/layout.tpl.html
@@ -1,8 +1,8 @@
 <!-- <div class="wrapper"> -->
 	
 	<header></header>
-	<sidebar></sidebar>
-
+	<sidebar menus="sideMenus"></sidebar>
+	
 	<content></content>
 
 	<!-- <div class="content-wrapper" ng-transclude style="min-height: {{contentHeight}}px"> -->
