프로젝트 설정 부분 개발중

--- a/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
+++ b/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
@@ -67,12 +67,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   |               | sidebar-mini                            |
   |=========================================================|
   -->
-<body class="skin-blue sidebar-mini">
+<body class="skin-blue sidebar-mini" layout:fragment="body">
 	
-	<layout ng-cloak="">
-		<div layout:fragment="content"></div>
-	</layout>
-	
-	<!-- <script type="text/javascript" src="all.js"></script> -->
 </body>
 </html>
