--- a/cinnamon-web-configuration/src/main/resources/templates/configuration/users.html
+++ b/cinnamon-web-configuration/src/main/resources/templates/configuration/users.html
@@ -3,7 +3,7 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="layout/base">
+	layout:decorator="layout/default">
 
 <head>
 <title>사용자</title>
