시스템 초기화 기능 개발중

--- a/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
+++ b/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
@@ -29,8 +29,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 
 <script type="text/javascript" src="/webjars/angularjs/1.4.5/angular.min.js"></script>
+<script type="text/javascript" src="/webjars/angular-animate/1.4.5/angular-animate.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.13.3/ui-bootstrap.min.js"></script>
+<script type="text/javascript" src="/webjars/ngBootbox/0.1.1/dist/ngBootbox.min.js"></script>
+<script type="text/javascript" src="/webjars/angular-toastr/1.4.1/dist/angular-toastr.min.js"></script>
 <!-- <script type="text/javascript" src="/webjars/jquery/2.1.4/dist/jquery.min.js"></script>
 <script type="text/javascript" src="/webjars/bootstrap/3.3.5/dist/js/bootstrap.min.js"></script> -->
 
