--- a/cinnamon-web-configuration/src/main/resources/templates/configuration/partials/initWizard/baseData.html
+++ b/cinnamon-web-configuration/src/main/resources/templates/configuration/partials/initWizard/baseData.html
@@ -1,4 +1,4 @@
-<div class="box box-solid">
+<div class="box box-solid" ng-controller="baseDataController">
 	<div class="box-body">
 		
 		<div class="wizard">
