--- a/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
+++ b/cinnamon-web-template-basic/src/main/resources/templates/layout/base.html
@@ -26,16 +26,21 @@ scratch. This page gets rid of all links and provides the needed markup only.
     -->
 <link href="/webjars/adminlte/2.3.0/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
 
+<link href="/webjars/angular-toastr/1.4.1/dist/angular-toastr.min.css" rel="stylesheet" type="text/css" />
 
 
+
+<script type="text/javascript" src="/webjars/jquery/2.1.4/dist/jquery.min.js"></script>
+<script type="text/javascript" src="/webjars/bootstrap/3.3.5/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/webjars/angularjs/1.4.5/angular.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-animate/1.4.5/angular-animate.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.13.3/ui-bootstrap.min.js"></script>
 <script type="text/javascript" src="/webjars/ngBootbox/0.1.1/dist/ngBootbox.min.js"></script>
-<script type="text/javascript" src="/webjars/angular-toastr/1.4.1/dist/angular-toastr.min.js"></script>
-<!-- <script type="text/javascript" src="/webjars/jquery/2.1.4/dist/jquery.min.js"></script>
-<script type="text/javascript" src="/webjars/bootstrap/3.3.5/dist/js/bootstrap.min.js"></script> -->
+<script type="text/javascript" src="/webjars/angular-toastr/1.4.1/dist/angular-toastr.js"></script>
+<script type="text/javascript" src="/webjars/angular-toastr/1.4.1/dist/angular-toastr.tpls.min.js"></script>
+
+<script type="text/javascript" src="/webjars/bootbox/4.4.0/bootbox.js"></script>
 
 <script type="text/javascript" src="/js/main.js"></script>
 <script type="text/javascript" src="/js/directives/header/header.js"></script>
