사이드 메뉴 개발중

--- a/cinnamon-core-template/src/main/resources/templates/layout/default.html
+++ b/cinnamon-core-template/src/main/resources/templates/layout/default.html
@@ -7,7 +7,7 @@
 <head>
 	
 </head>
-<body class="skin-blue sidebar-mini" layout:fragment="body">
+<body class="skin-red-light sidebar-mini" layout:fragment="body">
 	<layout ng-cloak="">
 		<header></header>
 		<sidebar menus="sideMenus"></sidebar>
