--- a/cinnamon-core-template/src/main/resources/templates/layout/base.html
+++ b/cinnamon-core-template/src/main/resources/templates/layout/base.html
@@ -19,12 +19,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- Ionicons -->
 <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
 <!-- Theme style -->
-<link href="/webjars/adminlte/2.3.0/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/adminlte/2.3.2/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
 <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
           page. However, you can choose any other skin. Make sure you
           apply the skin class to the body tag so the changes take effect.
     -->
-<link href="/webjars/adminlte/2.3.0/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/adminlte/2.3.2/dist/css/skins/skin-red-light.min.css" rel="stylesheet" type="text/css" />
 
 <link href="/webjars/angular-toastr/1.4.1/dist/angular-toastr.min.css" rel="stylesheet" type="text/css" />
 
@@ -75,7 +75,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   |               | sidebar-mini                            |
   |=========================================================|
   -->
-<body class="skin-blue sidebar-mini" layout:fragment="body">
+<body class="skin-red-light sidebar-mini" layout:fragment="body">
 	
 </body>
 </html>
