--- a/cinnamon-core-web/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/initWizard.html
@@ -12,7 +12,7 @@
 <link href="/css/cinnamon-core.css" rel="stylesheet" type="text/css" />
 
 
-<script type="text/javascript" src="/webjars/adminlte/2.3.0/dist/js/app.js"></script>
+<script type="text/javascript" src="/webjars/adminlte/2.3.2/dist/js/app.js"></script>
 <script type="text/javascript" src="/js/configuration/initWizard/welcome.js"></script>
 <script type="text/javascript" src="/js/configuration/initWizard/baseData.js"></script>
 <script type="text/javascript" src="/js/configuration/initWizard/firstUser.js"></script>
@@ -36,7 +36,7 @@ angular.module('cinnamon')
 </script>
 </head>
 
-<body class="skin-blue sidebar-collapse" layout:fragment="body">
+<body class="skin-red-light sidebar-collapse" layout:fragment="body">
 	<div class="wrapper">
 		<div class="main-header">
 
