사용자 관리 기능 개발중

--- a/cinnamon-core-template/src/main/resources/templates/layout/default.html
+++ b/cinnamon-core-template/src/main/resources/templates/layout/default.html
@@ -8,7 +8,7 @@
 	
 </head>
 <body class="skin-red-light sidebar-mini" layout:fragment="body">
-	<layout ng-cloak="">
+	<layout ng-cloak="" ng-transclude="">
 		<header></header>
 		<sidebar menus="sideMenus"></sidebar>
 		
