--- a/cinnamon-core-web/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/initWizard.html
@@ -34,6 +34,7 @@ angular.module('cinnamon')
 });
 /*]]>*/
 </script>
+<base href="/" />
 </head>
 
 <body class="skin-red-light sidebar-collapse" layout:fragment="body">
