--- a/cinnamon-core-template/src/main/resources/templates/layout/base.html
+++ b/cinnamon-core-template/src/main/resources/templates/layout/base.html
@@ -13,11 +13,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- Tell the browser to be responsive to screen width -->
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
 <!-- Bootstrap 3.3.4 -->
-<link href="/webjars/bootstrap/3.3.5/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/bootstrap/3.3.6/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <!-- Font Awesome Icons -->
-<link href="/webjars/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 <!-- Ionicons -->
-<link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
 <!-- Theme style -->
 <link href="/webjars/adminlte/2.3.2/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
 <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
@@ -26,19 +26,20 @@ scratch. This page gets rid of all links and provides the needed markup only.
     -->
 <link href="/webjars/adminlte/2.3.2/dist/css/skins/skin-red-light.min.css" rel="stylesheet" type="text/css" />
 
-<link href="/webjars/angular-toastr/1.4.1/dist/angular-toastr.min.css" rel="stylesheet" type="text/css" />
-
+<link href="/webjars/angular-toastr/1.6.0/dist/angular-toastr.min.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/animate.css/3.4.0/animate.min.css" rel="stylesheet" type="text/css" />
 
 
 <script type="text/javascript" src="/webjars/jquery/2.1.4/dist/jquery.min.js"></script>
-<script type="text/javascript" src="/webjars/bootstrap/3.3.5/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/webjars/angularjs/1.4.5/angular.min.js"></script>
-<script type="text/javascript" src="/webjars/angular-animate/1.4.5/angular-animate.min.js"></script>
+<script type="text/javascript" src="/webjars/bootstrap/3.3.6/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/webjars/angularjs/1.4.8/angular.min.js"></script>
+<script type="text/javascript" src="/webjars/angular-animate/1.4.8/angular-animate.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-router/0.2.15/release/angular-ui-router.min.js"></script>
-<script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.13.3/ui-bootstrap.min.js"></script>
-<script type="text/javascript" src="/webjars/ngBootbox/0.1.1/dist/ngBootbox.min.js"></script>
-<script type="text/javascript" src="/webjars/angular-toastr/1.4.1/dist/angular-toastr.js"></script>
-<script type="text/javascript" src="/webjars/angular-toastr/1.4.1/dist/angular-toastr.tpls.min.js"></script>
+<script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap.min.js"></script>
+<script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap-tpls.min.js"></script>
+<script type="text/javascript" src="/webjars/ngBootbox/0.1.2/dist/ngBootbox.min.js"></script>
+<script type="text/javascript" src="/webjars/angular-toastr/1.6.0/dist/angular-toastr.js"></script>
+<script type="text/javascript" src="/webjars/angular-toastr/1.6.0/dist/angular-toastr.tpls.min.js"></script>
 
 <script type="text/javascript" src="/webjars/bootbox/4.4.0/bootbox.js"></script>
 
