사용자 리스트 개발중

--- a/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/list.html
@@ -116,17 +116,50 @@
 			ng-change="onPageChange()"
 			ng-if="domains.totalPages > 1" />
 		
+		
+		<!-- <table class="table table-hover">
+			<colgroup>
+				<col />
+				<col width="60%" />
+			</colgroup>
+			<tbody>
+				<tr ng-repeat="domain in domains.content">
+					<td>
+						<i class="ion-happy-outline"></i>
+						<img src="/webjars/adminlte/2.3.2/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"
+							style="width: 100%;
+    max-width: 45px;
+    height: auto;
+    border-radius: 50%;" />
+					</td>
+					<td>
+						<b><a href="">{{domain.userId}}</a></b><br />
+						<span class="text-muted">{{domain.name}}</span>
+					</td>
+					<td>{{domain.email}}</td>
+					<td>{{domain.createdAt | date: 'yyyy년 MM월 dd일'}}</td>
+				</tr>
+			</tbody>
+		</table> -->
+		
+		
+		
+		
+		
 		<table class="table table-hover">
-			<thead>
+			<!-- <thead>
 				<tr>
 					<th>userId</th>
 					<th>이름</th>
 					<th>이메일</th>
 					<th>가입일</th>
 				</tr>
-			</thead>
+			</thead> -->
 			<tbody>
-				<tr data-ng-repeat="domain in domains.content">
+				<tr ng-repeat="domain in domains.content">
+					<td>
+						<i class="ion-person text-muted"></i>
+					</td>
 					<td>
 						<b><a ng-href="/configuration/users/{{domain.userId}}">{{domain.userId}}</a></b>
 					</td>
@@ -134,7 +167,7 @@
 					<td>
 						{{domain.email}}
 					</td>
-					<td>{{domain.createdAt | date: 'yyyy년 MM월 dd일'}}</td>
+					<td class="text-muted">{{domain.createdAt | date: 'yyyy년 MM월 dd일'}}</td>
 				</tr>
 			</tbody>
 		</table>
