--- a/cinnamon-core-web/src/main/resources/templates/configuration/users.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/users.html
@@ -39,8 +39,8 @@ angular.module('cinnamon')
 		<section class="content-header">
 			<h1>
 				<span>사용자</span> <small>설정</small>
-				<button class="btn btn-default btn-sm" uib-tooltip="사용자 등록">
-					<i class="fa fa-plus"></i>
+				<button class="btn btn-primary btn-xs">
+					<i class="fa fa-plus"></i> 사용자 등록
 				</button>
 			</h1>
 		</section>
