--- a/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/list.html
@@ -16,11 +16,11 @@
 		</div>
 		
 		<div class="form-group">
-			<a href="" class="btn btn-default btn-xs" ng-click="showDetailSearch = !showDetailSearch">상세 검색</a>
+			<a href="" class="btn btn-default btn-sm" ng-click="showDetailSearch = !showDetailSearch">상세 검색</a>
 			<a href="" class="text-muted" data-ng-click="initSearch()" uib-tooltip="검색을 초기화 합니다.">검색취소</a>
 			<div class="btn-group pull-right" uib-dropdown="">
-				<button class="btn btn-defaulf btn-xs" uib-dropdown-toggle="">
-					정렬 <i class="fa fa-sort"></i>
+				<button class="btn btn-defaulf btn-sm" uib-dropdown-toggle="">
+					정렬 <i class="fa fa-chevron-down"></i>
 				</button>
 				<ul class="uib-dropdown-menu" role="menu">
 					<li role="menuitem">
