사용자 페이지 개발중

--- a/cinnamon-core-web/src/main/resources/templates/configuration/users.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/users.html
@@ -39,9 +39,9 @@ angular.module('cinnamon')
 		<section class="content-header">
 			<h1>
 				<span>사용자</span> <small>설정</small>
-				<button class="btn btn-primary btn-xs">
+				<!-- <button class="btn btn-primary btn-xs">
 					<i class="fa fa-plus"></i> 사용자 등록
-				</button>
+				</button> -->
 			</h1>
 		</section>
 		
