--- a/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/list.html
@@ -1,6 +1,19 @@
+<div class="form-group">
+	<button class="btn btn-primary btn-sm">
+		<i class="fa fa-plus"></i> 사용자 등록
+	</button>
+</div>
+
 <div class="box box-solid">
-	
 	<div class="box-body">
+		
+		<!-- <div class="form-group">
+			<button class="btn btn-primary btn-sm">
+				<i class="fa fa-plus"></i> 사용자 등록
+			</button>
+		</div> -->
+		
+		
 		<div class="form-group">
 			<div class="input-group">
 				<span class="input-group-addon input-lg">
@@ -181,5 +194,7 @@
 			max-size="10"
 			ng-model="searchInfo.page"
 			ng-change="onPageChange()" />
+		
+		
 	</div>
 </div>
