--- a/cinnamon-core-template/src/main/resources/templates/partials/header.tpl.html
+++ b/cinnamon-core-template/src/main/resources/templates/partials/header.tpl.html
@@ -100,19 +100,19 @@
 				</li> -->
 				
 				<!-- User Account Menu -->
-				<li class="user-menu" dropdown>
+				<li class="user-menu" dropdown="">
 					<!-- Menu Toggle Button -->
-					<a href="" dropdown-toggle>
+					<a href="" dropdown-toggle="">
 						<!-- The user image in the navbar-->
 						<img src="/webjars/adminlte/2.3.2/dist/img/user2-160x160.jpg" class="user-image" alt="User Image" />
 						<!-- hidden-xs hides the username on small devices so only the image appears. -->
-						<span class="hidden-xs">Alexander Pierce</span>
+						<span class="hidden-xs">{{me.name}}</span>
 					</a>
 					<ul class="dropdown-menu">
 						<!-- The user image in the menu -->
 						<li class="user-header"><img src="/webjars/adminlte/2.3.2/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
 							<p>
-								Alexander Pierce - Web Developer <small>Member since Nov. 2012</small>
+								{{me.name}} {{me.job}} <small>가입일: {{me.createdAt | date: 'yyyy년 MM월 dd일 hh:mm:ss'}}</small>
 							</p></li>
 						<!-- Menu Body -->
 						<li class="user-body">
@@ -129,10 +129,16 @@
 						<!-- Menu Footer-->
 						<li class="user-footer">
 							<div class="pull-left">
-								<a href="#" class="btn btn-default btn-flat">Profile</a>
+								<a ng-href="/configuration/users/{{me.userId}}" target="_self" class="btn btn-default btn-flat">
+									<i class="glyphicon glyphicon-user"></i> 프로필</a>
 							</div>
 							<div class="pull-right">
-								<a href="#" class="btn btn-default btn-flat">Sign out</a>
+								<!-- <a href="#" class="btn btn-default btn-flat">로그아웃</a> -->
+								<form action="/logout" method="post">
+									<button type="submit" class="btn btn-default btn-flat">
+										<i class="fa fa-sign-out"></i> 로그아웃
+									</button>
+								</form>
 							</div>
 						</li>
 					</ul>
