--- a/cinnamon-core-template/src/main/resources/templates/partials/sidebar.tpl.html
+++ b/cinnamon-core-template/src/main/resources/templates/partials/sidebar.tpl.html
@@ -5,38 +5,36 @@
 		<!-- Sidebar user panel (optional) -->
 		<div class="user-panel">
 			<div class="pull-left image">
-				<img src="/webjars/adminlte/2.3.2/dist/img/user2-160x160.jpg" class="img-circle"
-					alt="User Image" />
+				<img src="/webjars/adminlte/2.3.2/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
 			</div>
 			<div class="pull-left info">
-				<p>Alexander Pierce</p>
+				<p>{{me.name}}</p>
 				<!-- Status -->
 				<a href=""><i class="fa fa-circle text-success"></i> Online</a>
 			</div>
 		</div>
 	
 		<!-- search form (Optional) -->
-		<form action="" method="get" class="sidebar-form">
+		<!-- <form action="" method="get" class="sidebar-form">
 			<div class="input-group">
-				<input type="text" name="q" class="form-control"
-					placeholder="Search..." /> <span class="input-group-btn">
-					<button type="submit" name="search" id="search-btn"
-						class="btn btn-flat">
+				<input type="text" ng-model="searchKeyword" class="form-control" placeholder="Search..." />
+				<span class="input-group-btn">
+					<button type="button" name="search" id="search-btn" class="btn btn-flat">
 						<i class="fa fa-search"></i>
 					</button>
 				</span>
 			</div>
-		</form>
+		</form> -->
 		<!-- /.search form -->
 		<!-- Sidebar Menu -->
 		<ul class="sidebar-menu">
-			<li ng-repeat="menu in menus" ng-class="menuLiClass(menu)" ng-click="toggleShowChild(menu)">
+			<li ng-repeat="menu in menus | filter: searchKeyword" ng-class="menuLiClass(menu)" ng-click="toggleShowChild(menu)">
 				<a href="" ng-href="{{menu.uri}}" target="_self">
 					<i ng-class="menu.iconClass"></i> <span>{{menu.name}}</span>
 					<i ng-if="menu.childs != 0" class="fa fa-angle-left pull-right"></i>
 				</a>
 				<ul class="treeview-menu animated fadeIn" ng-if="menu.childs != 0">
-					<li ng-repeat="child in menu.childs">
+					<li ng-repeat="child in menu.childs | filter: searchKeyword">
 						<a href="">
 							<i ng-class="child.iconClass"></i> {{child.name}}
 						</a>
