--- a/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/view.html
@@ -44,8 +44,16 @@
 			<uib-tab heading="소개">
 			</uib-tab>
 			<uib-tab heading="사용자 그룹">
+				<uib-tab-heading>
+					<i class="fa fa-users"></i> 사용자 그룹
+				</uib-tab-heading>
+				
 			</uib-tab>
-			<uib-tab heading="활동기록">
+			<uib-tab>
+				<uib-tab-heading>
+					<i class="fa fa-rss"></i> 활동기록
+				</uib-tab-heading>
+				
 			</uib-tab>
 		</uib-tabset>
 	</div>
