회원가입 화면 개발중

--- a/cinnamon-core-template/src/main/resources/templates/layout/base.html
+++ b/cinnamon-core-template/src/main/resources/templates/layout/base.html
@@ -28,7 +28,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 <link href="/webjars/angular-toastr/1.6.0/dist/angular-toastr.min.css" rel="stylesheet" type="text/css" />
 <link href="/webjars/animate.css/3.4.0/animate.min.css" rel="stylesheet" type="text/css" />
-
+<link href="/webjars/iCheck/1.0.2/skins/flat/red.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/webjars/jquery/2.1.4/dist/jquery.min.js"></script>
 <script type="text/javascript" src="/webjars/bootstrap/3.3.6/dist/js/bootstrap.min.js"></script>
@@ -42,6 +42,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script type="text/javascript" src="/webjars/angular-toastr/1.6.0/dist/angular-toastr.tpls.min.js"></script>
 
 <script type="text/javascript" src="/webjars/bootbox/4.4.0/bootbox.js"></script>
+<script type="text/javascript" src="/webjars/iCheck/1.0.2/icheck.min.js"></script>
 
 <script type="text/javascript" src="/js/main.js"></script>
 <script type="text/javascript" src="/js/directives/header/header.js"></script>
@@ -49,6 +50,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script type="text/javascript" src="/js/directives/footer/footer.js"></script>
 <script type="text/javascript" src="/js/directives/controlSidebar/controlSidebar.js"></script>
 <script type="text/javascript" src="/js/directives/layout/layout.js"></script>
+<script type="text/javascript" src="/js/directives/icheck/icheck.js"></script>
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
