--- a/cinnamon-core-template/src/main/resources/templates/partials/header.html
+++ b/cinnamon-core-template/src/main/resources/templates/partials/header.html
@@ -157,7 +157,7 @@
 								{{me.name}} {{me.job}} <small>가입일: {{me.createdAt | date: 'yyyy년 MM월 dd일 hh:mm:ss'}}</small>
 							</p></li>
 						<!-- Menu Body -->
-						<li class="user-body">
+						<!-- <li class="user-body">
 							<div class="col-xs-4 text-center">
 								<a href="#">Followers</a>
 							</div>
@@ -167,7 +167,7 @@
 							<div class="col-xs-4 text-center">
 								<a href="#">Friends</a>
 							</div>
-						</li>
+						</li> -->
 						<!-- Menu Footer-->
 						<li class="user-footer">
 							<div class="pull-left">
