--- a/cinnamon-core-web/src/main/resources/templates/login.html
+++ b/cinnamon-core-web/src/main/resources/templates/login.html
@@ -59,15 +59,17 @@ angular.module('cinnamon')
 			
 			<form th:action="@{/login}" method="post">
 				<div class="form-group has-feedback">
-					<input type="text" class="form-control" name="username" value="" placeholder="id" /> <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+					<input type="text" class="form-control" name="username" value="" placeholder="id" /> <span class="glyphicon glyphicon-user form-control-feedback"></span>
 				</div>
 				<div class="form-group has-feedback">
 					<input type="password" class="form-control" name="password" value="" placeholder="Password" /> <span class="glyphicon glyphicon-lock form-control-feedback"></span>
 				</div>
 				<div class="row">
 					<div class="col-xs-8">
-						<div class="checkbox">
-							<label> <input type="checkbox" /> 로그인 정보 기억</label>
+						<div class="checkbox icheck">
+							<label>
+								<input type="checkbox" icheck="" ng-model="rememberMe" /> 로그인 정보 기억
+							</label>
 						</div>
 					</div>
 					<!-- /.col -->
