사용자 그룹 정렬 디렉티브

--- a/cinnamon-core-template/src/main/resources/templates/layout/base.html
+++ b/cinnamon-core-template/src/main/resources/templates/layout/base.html
@@ -51,6 +51,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script type="text/javascript" src="/js/directives/controlSidebar/controlSidebar.js"></script>
 <script type="text/javascript" src="/js/directives/layout/layout.js"></script>
 <script type="text/javascript" src="/js/directives/icheck/icheck.js"></script>
+<script type="text/javascript" src="/js/directives/selectOrder/selectOrder.js"></script>
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
