--- a/cinnamon-core-template/src/main/resources/templates/partials/header.html
+++ b/cinnamon-core-template/src/main/resources/templates/partials/header.html
@@ -175,12 +175,12 @@
 									<i class="glyphicon glyphicon-user"></i> 프로필</a>
 							</div>
 							<div class="pull-right">
-								<!-- <a href="#" class="btn btn-default btn-flat">로그아웃</a> -->
-								<form action="/logout" method="post">
+								<a href="/logout" target="_self" class="btn btn-default btn-flat">로그아웃</a>
+								<!-- <form action="/logout" method="post">
 									<button type="submit" class="btn btn-default btn-flat">
 										<i class="fa fa-sign-out"></i> 로그아웃
 									</button>
-								</form>
+								</form> -->
 							</div>
 						</li>
 					</ul>
