--- a/cinnamon-core-web/src/main/resources/templates/configuration/partials/userGroups/list.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/partials/userGroups/list.html
@@ -2,12 +2,12 @@
 	<!-- Content Header (Page header) -->
 	<section class="content-header">
 		<h1>
-			<span>사용자</span> <small>설정</small>
+			<span>사용자 모임</span> <small>설정</small>
 			<button class="btn btn-primary btn-sm"
-				ng-bootbox-title="회원 등록"
+				ng-bootbox-title="사용자 모임 생성"
 				ng-bootbox-custom-dialog=""
-				ng-bootbox-custom-dialog-template="/configuration/partials/users/create">
-				<i class="fa fa-plus"></i> 사용자 등록
+				ng-bootbox-custom-dialog-template="/configuration/partials/userGroups/create">
+				<i class="fa fa-plus"></i> 사용자 모임 생성
 			</button>
 		</h1>
 	</section>
@@ -30,7 +30,7 @@
 						<span class="input-group-addon input-lg">
 							<i class="fa fa-search"></i> 검색
 						</span>
-						<input type="text" class="form-control input-lg" data-ng-model="searchInfo.name" maxlength="200" />
+						<input type="text" class="form-control input-lg" data-ng-model="searchInfo.keyword" ng-keypress="onSearch($event)" maxlength="200" />
 						<!-- <span class="input-group-btn">
 							<button class="btn btn-primary input-lg" type="button" data-ng-click="search()">
 								<i class="fa fa-search fa-lg"></i> 검색
@@ -42,23 +42,24 @@
 				<div class="form-group">
 					<a href="" class="btn btn-default btn-sm" ng-click="showDetailSearch = !showDetailSearch">상세 검색</a>
 					<a href="" class="text-muted" data-ng-click="initSearch()" uib-tooltip="검색을 초기화 합니다.">검색취소</a>
-					<div class="btn-group pull-right" uib-dropdown="">
+					<select-order order-fields="sortFields" on-changed="onChangeOrder(field, direction)" />
+					<!-- <div class="btn-group pull-right" uib-dropdown="">
 						<button class="btn btn-defaulf btn-sm" uib-dropdown-toggle="">
 							정렬 <i class="fa fa-chevron-down"></i>
 						</button>
 						<ul class="uib-dropdown-menu" role="menu">
 							<li role="menuitem">
-								<a href="">userId</a>
+								<a href="" ng-click="changeOder('userGroupId')">userGroupId</a>
 							</li>
 							<li role="menuitem" class="active">
-								<a href=""><i class="fa fa-arrow-down"></i> 이름</a>
+								<a href=""><i class="fa fa-arrow-down"></i> 사용자 모임 이름</a>
 							</li>
 							<li class="divider"></li>
 							<li role="menuitem">
 								<a href="">초기화</a>
 							</li>
 						</ul>
-					</div>
+					</div> -->
 				</div>
 				
 				<div ng-show="showDetailSearch" ng-class="showDetailSearch ? 'animated fadeIn': ''">
@@ -67,40 +68,22 @@
 					
 						<div class="form-group">
 							<label class="form-label text-muted">상세 조건</label>
+							<button class="btn btn-primary btn-sm" ng-click="search()"><i class="fa fa-search"></i> 검색</button>
 						</div>
 						<div class="form-group">
 							<div class="input-group">
 								<span class="input-group-addon">
-									userId
+									userGroupId
 								</span>
-								<input type="text" class="form-control" ng-model="searchInfo.userId" maxlength="200" />
+								<input type="number" class="form-control" ng-model="searchInfo.userGroupId" />
 							</div>
 						</div>
 						<div class="form-group">
 							<div class="input-group">
 								<span class="input-group-addon">
-									이메일
+									사용자 모임 이름
 								</span>
-								<input type="text" class="form-control" ng-model="searchInfo.email" maxlength="200" />
-							</div>
-						</div>
-						<div class="form-group">
-							<div class="input-group">
-								<span class="input-group-addon">
-									성별
-								</span>
-								<select ng-model="searchInfo.gender" class="form-control">
-									<option value="">선택하세요</option>
-									<option ng-repeat="(id,name) in genders" value="{{id}}">{{name}}</option>
-								</select>
-							</div>
-						</div>
-						<div class="form-group">
-							<div class="input-group">
-								<span class="input-group-addon">
-									국적
-								</span>
-								<input type="text" class="form-control" ng-model="searchInfo.nation" maxlength="200" />
+								<input type="text" class="form-control" ng-model="searchInfo.name" maxlength="200" />
 							</div>
 						</div>
 						<div class="form-group">
@@ -123,6 +106,10 @@
 					boundary-links="true"
 					max-size="10"
 					ng-model="searchInfo.page"
+					first-text="처음"
+					previous-text="이전"
+					next-text="다음"
+					last-text="끝"
 					ng-change="onPageChange()"
 					ng-if="domains.totalPages > 1" />
 				
@@ -130,16 +117,13 @@
 					<tbody>
 						<tr ng-repeat="domain in domains.content">
 							<td>
-								<i class="ion-person text-muted"></i>
+								<i class="fa fa-users fa-2x text-muted"></i>
 							</td>
 							<td>
-								<b><a ng-href="/configuration/users/{{domain.userId}}">{{domain.userId}}</a></b>
+								<b><a ng-href="/configuration/userGroups/{{domain.userGroupId}}">{{domain.userGroupId}}. {{domain.name}}</a></b>
+								<br />
+								<small class="text-muted">권한: {{domain.authority.name}} </small>
 							</td>
-							<td>{{domain.name}}</td>
-							<td>
-								{{domain.email}}
-							</td>
-							<td class="text-muted">{{domain.createdAt | date: 'yyyy년 MM월 dd일'}}</td>
 						</tr>
 					</tbody>
 				</table>
@@ -152,6 +136,10 @@
 					boundary-links="true"
 					max-size="10"
 					ng-model="searchInfo.page"
+					first-text="처음"
+					previous-text="이전"
+					next-text="다음"
+					last-text="끝"
 					ng-change="onPageChange()" />
 				
 				
