--- a/cinnamon-core-web/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/initWizard.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html
+	ng-app="cinnamon"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="layout/base">
@@ -11,8 +12,8 @@
 
 <link href="/css/cinnamon-core.css" rel="stylesheet" type="text/css" />
 
-
-<script type="text/javascript" src="/webjars/adminlte/2.3.2/dist/js/app.js"></script>
+<script type="text/javascript" src="/js/main.js"></script>
+<!-- <script type="text/javascript" src="/webjars/adminlte/2.3.2/dist/js/app.js"></script> -->
 <script type="text/javascript" src="/js/configuration/initWizard/welcome.js"></script>
 <script type="text/javascript" src="/js/configuration/initWizard/baseData.js"></script>
 <script type="text/javascript" src="/js/configuration/initWizard/firstUser.js"></script>
