--- a/cinnamon-core-web/src/main/resources/templates/join.html
+++ b/cinnamon-core-web/src/main/resources/templates/join.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html
+	ng-app="cinnamon"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="layout/base">
@@ -9,6 +10,7 @@
 <title>사용자</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
+<script type="text/javascript" src="/js/main.js"></script>
 <script type="text/javascript">
 /*<![CDATA[*/
 angular.module('cinnamon')
