--- a/cinnamon-core-web/src/main/resources/templates/login.html
+++ b/cinnamon-core-web/src/main/resources/templates/login.html
@@ -8,6 +8,15 @@
 <head>
 <title>로그인</title>
 
+<script type="text/javascript">
+$(function() {
+	$('input[type="checkbox"]').iCheck({
+		checkboxClass: 'icheckbox_flat-red',
+		radioClass: 'iradio_flat-red',
+		increaseArea : '20%' // optional
+	});
+});
+</script>
 </head>
 
 <body class="login-page" layout:fragment="body">
