--- a/cinnamon-core-web/src/main/resources/templates/configuration/partials/userGroups/view.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/partials/userGroups/view.html
@@ -45,7 +45,11 @@
 						<uib-tab-heading>
 							<i class="fa fa-user"></i> 사용자
 						</uib-tab-heading>
-						
+							
+							<button class="btn btn-primary btn-sm">
+								<i class="fa fa-user"></i> 사용자 추가
+							</button>
+							
 					</uib-tab>
 				</uib-tabset>
 			</div>
